# fool_code

./: .gitignore  DEVELOPMENT.md  FOOL_CODE.md  README.md  build.bat  pyproject.toml  run.py  start.py
desktop-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
desktop-ui/src/: App.tsx  index.css
desktop-ui/src/buddy/: HeartBurst.tsx  RoamingPet.tsx  SpeechBubble.tsx  SpriteRenderer.tsx  companion.ts  platformScanner.ts  sprites.ts  types.ts  useCompanion.ts  useRoaming.ts  useStreamingDescend.ts
desktop-ui/src/components/: ArtifactPanel.tsx  (+16 more)
fool_code/: __init__.py  api_types.py  app.py  events.py  main.py  state.py  types.py
fool_code/computer_use/: README.md  __init__.py  executor.py  scaling.py  tools.py  types.py  window_manager.py
fool_code/computer_use/_native/: Cargo.toml  pyproject.toml
fool_code/computer_use/_native/python/fool_code_cu/: __init__.py  fool_code_cu.cp313-win_amd64.pyd
fool_code/computer_use/_native/src/: apps.rs  clipboard.rs  display.rs  input.rs  lib.rs  screen.rs
fool_code/internal_mcp/: __init__.py  registry.py  types.py
fool_code/magma/: __init__.py  consolidator.py  extractor.py  retriever.py  schemas.py  store.py
fool_code/magma/_native/: Cargo.toml  pyproject.toml
fool_code/magma/_native/python/magma_memory/: __init__.py  magma_memory.cp313-win_amd64.pyd
fool_code/magma/_native/src/: ingest.rs  lib.rs  query.rs  schema.rs  vector.rs
fool_code/mcp/: __init__.py  http_transport.py  manager.py  sse.py  stdio.py  types.py  ws.py
fool_code/providers/: __init__.py  model_discovery.py  openai_compat.py
fool_code/routers/: __init__.py  chat.py  mcp_routes.py  memory.py  sessions.py  settings.py  skill_market.py  skill_store.py
fool_code/runtime/: __init__.py  agent_types.py  compact.py  config.py  content_store.py  conversation.py  file_converter.py  hooks.py  memory.py  message_pipeline.py  permissions.py  playbook.py  prompt.py  providers_config.py  session.py  skill_review.py  subagent.py  tool_result_storage.py  transcript.py  usage.py
fool_code/skill_store/: __init__.py  consolidator.py  enricher.py  ingestor.py  retriever.py  scanner.py  schemas.py  store.py
fool_code/skill_store/_native/: Cargo.toml  pyproject.toml
fool_code/skill_store/_native/python/skill_store/: __init__.py  skill_store.cp313-win_amd64.pyd
fool_code/skill_store/_native/src/: ingest.rs  lib.rs  query.rs  schema.rs  vector.rs
fool_code/tools/: __init__.py  bash.py  file_ops.py  memory_query.py  misc.py  notebook.py  plan_mode.py  playbook.py  registry.py  search.py  skill.py  todo.py  tool_protocol.py  web.py
tests/: test_jionlp_time.py  test_magma.py  test_magma_e2e.py  test_skill_integration.py  test_skill_manage.py
(+13 files in other folders)
