[project]
name = "fool-code"
version = "0.1.0"
description = "Fool Code - AI coding assistant desktop app (Python edition)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "websockets>=16.0",
    "Pillow>=10.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "jionlp>=1.5.27",
    "jieba>=0.42",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.3"]
build = ["pyinstaller>=6.0"]
dev = [
    "pywebview>=5.3",
    "pyinstaller>=6.0",
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
fool-code = "fool_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fool_code"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
