[package]
name = "fool_code_cu"
version = "0.1.0"
edition = "2021"

[lib]
name = "fool_code_cu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
enigo = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_ToolHelp",
] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
