[package]
name = "magma_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "magma_memory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
