[package]
name = "skill_store"
version = "0.1.0"
edition = "2021"

[lib]
name = "skill_store"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
